--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   scroll_to_index: ^2.0.0
 
   url_strategy: ^0.2.0
+
+  syncfusion_flutter_charts: ^19.2.51
  
 
 dev_dependencies:
