--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   syncfusion_flutter_charts: ^19.2.51
  
 
+  percent_indicator: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
