--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ flutter:
     - assest/youtube.png
     - assest/close.png
     - assest/Post.png
+    - assest/linkedin.png
+    - assest/face.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
